go through and fix spelling, HTML, visual style, and whitespace errors

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -102,12 +102,6 @@ p.json {
   padding-bottom: 1rem;
 }
 
-
-/* Sponsor Page */
-
-p.sponsortext {
-  font-size:1.5em;
-}
 /* CTF 2019 page */
 
 #past img {
@@ -115,19 +109,16 @@ p.sponsortext {
 }
 
 #past h3, h4, h5 {
-    text-align: center;
+  text-align: center;
 }
 
-#line {
-  width: 80%;
-  border: 2px solid #522D80;
-  border-radius: 3px;
+#past #sponsors .col img {
+  max-width: 400px;
 }
 
 @media only screen and (min-width: 1200px) {
   #winners .card-content {
     height: 12em;
-
   }
 }
 
